--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 	color: #fff;
 	position: relative;
 	-webkit-text-size-adjust: none;
-	background:url(http://i.imgur.com/RGNXBxQ.jpg) no-repeat center center fixed;
+	background:url(http://nyekrip.com/demo/image/cover-io.png) no-repeat center center fixed;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
